packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 32bit integer
| @ tests/test_debug.rs:228:38
\-> Root error
    > @ tests/common.rs:140:5

