packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook@glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
unsigned 32bit integer
│ 📌 tests/test_debug.rs:286:38
╰─▶ Root error
    ╰ 📌 tests/common.rs:140:5
