packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook@spantrace-backtrace.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
unsigned 32bit integer
| @ tests/test_debug.rs:289:38
|-> Root error
|   > @ tests/common.rs:140:5
|-> spantrace with 2 frames (1)
|   > @ tests/common.rs:140:5
\-> backtrace with [n] frames (1)
    > @ tests/common.rs:140:5
