packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_combine.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u16 (other)
| @ tests/test_debug.rs:274:14
|-> u64
|   > @ tests/test_debug.rs:273:14
|-> u32
|   > @ tests/test_debug.rs:272:14
\-> Root error
    > @ tests/common.rs:140:5

