packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_combine@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
u16 (other)
│ 📌 tests/test_debug.rs:331:14
├─▶ u64
│   ╰ 📌 tests/test_debug.rs:330:14
├─▶ u32
│   ╰ 📌 tests/test_debug.rs:329:14
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with [n] frames (1)
    ╰ 📌 tests/common.rs:140:5
